cleanups and bugfixes

--- a/docs/gettingstarted/quickoverview.ipynb
+++ b/docs/gettingstarted/quickoverview.ipynb
@@ -53,9 +53,9 @@
     "## Select a convention\n",
     "The file content is controlled by means of a `convention`. This means that specific attributes are required for HDF groups or datasets.\n",
     "\n",
-    "They can be understood as rules, which are validated during usage. To make those rules to become effective, the convention must be imported and enabled. Conventions can be created by the user, too. More on this [here](../conventions/standard_attributes_and_conventions.ipynb).\n",
+    "They can be understood as rules, which are validated during usage. To make those rules to become effective, the convention must be imported and enabled. Conventions can be created by the user, too. More on this [here](../uerguide/convention/index.rst).\n",
     "\n",
-    "For now, we select the existing one, which is published on [Zenodo](https://zenodo.org/record/8276716)"
+    "For now, we select the existing one, which is published on [Zenodo](https://zenodo.org/record/10428795)"
    ]
   },
   {
@@ -1160,7 +1160,7 @@
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li><li style=\"list-style-type: none; font-style: italic\">contact : True</li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : https://zenodo.org/record/8276716</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li><li style=\"list-style-type: none; font-style: italic\">contact : True</li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : https://zenodo.org/record/10428795</li>\n",
        "                    </ul>\n",
        "\n",
        "                <ul id=\"ds-1-/time-7638844100\" class=\"h5tb-var-list\">\n",
