--- a/docs/userguide/convention/examples/metadata4ing.ipynb
+++ b/docs/userguide/convention/examples/metadata4ing.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "class SpecialStandardAttribute(h5tbx.convention.standard_attributes.StandardAttribute):\n",
     "\n",
-    "    def __setter__(self, parent, value, attrs=None):\n",
+    "    def set(self, parent, value, attrs=None):\n",
     "        \"\"\"Is called when attribute of a standard attribute is set\"\"\"\n",
     "        print(value)\n",
     "        grp_name = f'{value[\"role\"]}Person'\n",
@@ -349,8 +349,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4728091400\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4728091400\">\n",
+       "                        <input id=\"group-ds--6231460000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--6231460000\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
@@ -359,27 +359,27 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-CreatorPerson-4729000400\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-CreatorPerson-4729000400\">\n",
+       "                        <input id=\"group-ds-CreatorPerson-6235153700\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-CreatorPerson-6235153700\">\n",
        "                        CreatorPerson<span>(2)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                    <ul id=\"ds-1-/CreatorPerson/first_name-47296592001\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/CreatorPerson/first_name-47296592002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <ul id=\"ds-1-/CreatorPerson/first_name-62368262001\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/CreatorPerson/first_name-62368262002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
        "                    <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/CreatorPerson/first_name-47296592002\">first_name</label>: [|S8] data=b'Matthias'\n",
+       "                    for=\"ds-2-/CreatorPerson/first_name-62368262002\">first_name</label>: [|S8] data=b'Matthias'\n",
        "                    \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">description : The first name of a person</li><li style=\"list-style-type: none; font-style: italic\">iri : <a href=\"http://xmlns.com/foaf/0.1/firstName\">http://xmlns.com/foaf/0.1/firstName</a></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                    <ul id=\"ds-1-/CreatorPerson/last_name-47301011001\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/CreatorPerson/last_name-47301011002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <ul id=\"ds-1-/CreatorPerson/last_name-62379460001\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/CreatorPerson/last_name-62379460002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
        "                    <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/CreatorPerson/last_name-47301011002\">last_name</label>: [|S6] data=b'Probst'\n",
+       "                    for=\"ds-2-/CreatorPerson/last_name-62379460002\">last_name</label>: [|S6] data=b'Probst'\n",
        "                    \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">description : The last name of a person</li><li style=\"list-style-type: none; font-style: italic\">iri : <a href=\"http://xmlns.com/foaf/0.1/lastName\">http://xmlns.com/foaf/0.1/lastName</a></li>\n",
        "                </ul>\n",
