--- a/docs/userguide/convention/examples/standard_name_convention.ipynb
+++ b/docs/userguide/convention/examples/standard_name_convention.ipynb
@@ -117,8 +117,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_wind5762191700\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_wind5762191700\">\n",
+       "        <input id=\"group-x_wind6125604300\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_wind6125604300\">\n",
        "        x_wind</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : \"x\" indicates a vector component along the grid x-axis, positive with increasing x. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.).</li>      </il>\n",
@@ -213,10 +213,10 @@
     {
      "data": {
       "text/html": [
-       "<li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li>"
+       "<li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10428795)</li>"
       ],
       "text/plain": [
-       "<StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)>"
+       "<StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10428795)>"
       ]
      },
      "execution_count": 6,
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "snt = StandardNameTable.from_zenodo(8276716)\n",
+    "snt = StandardNameTable.from_zenodo(10428795)\n",
     "snt"
    ]
   },
@@ -279,34 +279,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>units</th>\n",
        "      <th>description</th>\n",
+       "      <th>units</th>\n",
        "      <th>vector</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>coordinate</th>\n",
-       "      <td>m</td>\n",
        "      <td>Coordinate refers to the spatial coordinate. Coordinate is a vector quantity.</td>\n",
+       "      <td>m</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>static_pressure</th>\n",
-       "      <td>Pa</td>\n",
        "      <td>Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</td>\n",
+       "      <td>Pa</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>time</th>\n",
+       "      <td>Time refers tothe relative time since start of data aquisition.</td>\n",
        "      <td>s</td>\n",
-       "      <td>Time refers to the relative time since start of data acquisition.</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>velocity</th>\n",
-       "      <td>m/s</td>\n",
        "      <td>Velocity refers to the change of position over time. Velocity is a vector quantity.</td>\n",
+       "      <td>m/s</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -447,8 +447,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity5924035700\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity5924035700\">\n",
+       "        <input id=\"group-x_velocity10249253700\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity10249253700\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -489,8 +489,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate5938716400\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate5938716400\">\n",
+       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate10303039000\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate10303039000\">\n",
        "        derivative_of_x_velocity_wrt_x_coordinate</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : 1/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Derivative of x_velocity with respect to x_coordinate. Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector. Coordinate refers to the spatial coordinate. Coordinate is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -521,8 +521,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-square_of_static_pressure5953409400\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure5953409400\">\n",
+       "        <input id=\"group-square_of_static_pressure10363515800\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure10363515800\">\n",
        "        square_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa**2</li>           <li style=\"list-style-type: none; font-style: italic\">description : Square of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
@@ -553,8 +553,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-arithmetic_mean_of_static_pressure5967643500\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure5967643500\">\n",
+       "        <input id=\"group-arithmetic_mean_of_static_pressure10391506600\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure10391506600\">\n",
        "        arithmetic_mean_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Arithmetic mean of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
@@ -591,35 +591,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Convention \"h5rdmtoolbox-tutorial-convention\" filename: C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\cache\\10.5281_zenodo.8357399\n",
-      "creating directory for the convention\n",
-      "No special functions defined\n",
-      "Found 0 function(s) in C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\conventions\\h5rdmtoolbox_tutorial_convention\\h5rdmtoolbox_tutorial_convention.py\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "\u001b[1mConvention(\"standard name convention\")\u001b[0m\n",
-       "contact: https://orcid.org/0000-0001-8729-0482\n",
-       "  File.__init__():\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.convention.consts.DefaultValue object at 0x000001CBD2CD2100>):\n",
-       "\t\tThe standard name table of the convention.\n",
-       "  Group.create_dataset():\n",
-       "    * \u001b[3mscale\u001b[0m (default=None):\n",
-       "\t\tScale factor for the dataset values.\n",
-       "    * \u001b[3moffset\u001b[0m (default=None):\n",
-       "\t\tThe offset of the dataset.\n",
-       "    * \u001b[3munits\u001b[0m (default=None):\n",
-       "\t\tThe physical unit of the dataset. If dimensionless, the unit is ''.\n",
-       "    * \u001b[3mstandard_name\u001b[0m (default=None):\n",
-       "\t\tStandard name of the dataset. If not set, the long_name attribute must be given.\n",
-       "    * \u001b[3mlong_name\u001b[0m (default=None):\n",
-       "\t\tAn comprehensive description of the dataset. If not set, the standard_name attribute must be given.\n",
-       "  Group.create_group(): (\u001b[3mNothing registered\u001b[0m)"
+       "Convention(\"standard name convention\")"
       ]
      },
      "execution_count": 16,
@@ -661,7 +635,7 @@
    ],
    "source": [
     "with h5tbx.File() as h5:\n",
-    "    snt = (h5.standard_name_table)\n",
+    "    snt = h5.standard_name_table\n",
     "\n",
     "print('The available (base) standard names are: ', snt.names)"
    ]
@@ -726,8 +700,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity6109104700\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6109104700\">\n",
+       "        <input id=\"group-x_velocity10756639900\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity10756639900\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -952,27 +926,19 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--6144667600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--6144667600\">\n",
+       "                        <input id=\"group-ds--10808612100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--10808612100\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.9.0a0</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : 10428795</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-6146480400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-6146483000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-6146483000\">u</label>\n",
+       "                <ul id=\"ds-1-/u-10811866800\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-10811870500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-10811870500\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "    <li>\n",
-       "        <input id=\"group-x_velocity6147826900\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6147826900\">\n",
-       "        x_velocity</label>\n",
-       "        <ul class=\"h5tb-attr-list\">\n",
-       "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
-       "    </ul>\n",
-       "</ul></li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
