--- a/docs/howto/ht004.ipynb
+++ b/docs/howto/ht004.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# ... add an affix-function to a standard name table during runtime?\n",
-    "If you are using the [standard name convention](../conventions/standard_attributes_and_conventions.ipynb) you are familiar with transformation functions like \"derivative_of_\\<SN1\\>_wrt_\\<SN2\\>\" or \"square_of_\\<SN\\>\".\n",
+    "If you are using the [standard name convention](../userguide/convention/index.rst), you are familiar with transformation functions like \"derivative_of_\\<SN1\\>_wrt_\\<SN2\\>\" or \"square_of_\\<SN\\>\".\n",
     "\n",
     "Now, you want to add your custom transformation function without changing the package code. Say, you want to add the transformation \"maximum_of_<StdName>\", referring to the maximum value of your data.\n",
     "\n",
