--- a/docs/userguide/database/hdfDB.ipynb
+++ b/docs/userguide/database/hdfDB.ipynb
@@ -246,25 +246,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--7127246700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--7127246700\">\n",
+       "                        <input id=\"group-ds--4820644800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4820644800\">\n",
        "                        /<span>(4)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li><li style=\"list-style-type: none; font-style: italic\">check_value : 0</li><li style=\"list-style-type: none; font-style: italic\">contact : {\"name\": \"John Doe\", \"surname\": \"Doe\"}</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li><li style=\"list-style-type: none; font-style: italic\">timestamp : 2023-12-18T14:51:29.913044</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li><li style=\"list-style-type: none; font-style: italic\">check_value : 0</li><li style=\"list-style-type: none; font-style: italic\">contact : {\"name\": \"John Doe\", \"surname\": \"Doe\"}</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li><li style=\"list-style-type: none; font-style: italic\">timestamp : 2023-12-24T12:58:32.956568</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/pressure1-7131603800\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/pressure1-7131608200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/pressure1-7131608200\">pressure1</label>\n",
+       "                <ul id=\"ds-1-/pressure1-4823370700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/pressure1-4823373100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/pressure1-4823373100\">pressure1</label>\n",
        "                    <span class=\"h5tb-dims\">(10) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : -140.3</li><li style=\"list-style-type: none; font-style: italic\">standard_name : pressure</li><li style=\"list-style-type: none; font-style: italic\">units : Pa</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/velocity-7132275800\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/velocity-7132279600\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/velocity-7132279600\">velocity</label>\n",
+       "                <ul id=\"ds-1-/velocity-4823756000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/velocity-4823758100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/velocity-4823758100\">velocity</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : 14.2</li><li style=\"list-style-type: none; font-style: italic\">standard_name : velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
@@ -272,17 +272,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-group1-7132744500\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-group1-7132744500\">\n",
+       "                        <input id=\"group-ds-group1-4824036500\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-group1-4824036500\">\n",
        "                        group1<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : 0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/group1/velocity-7133516100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/group1/velocity-7133520100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/group1/velocity-7133520100\">velocity</label>\n",
+       "                <ul id=\"ds-1-/group1/velocity-4824473800\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/group1/velocity-4824476100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/group1/velocity-4824476100\">velocity</label>\n",
        "                    <span class=\"h5tb-dims\">(5) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
@@ -292,33 +292,33 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-group2-7133909500\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-group2-7133909500\">\n",
+       "                        <input id=\"group-ds-group2-4824702300\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-group2-4824702300\">\n",
        "                        group2<span>(3)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : 0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/group2/pressure2-7135394500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/group2/pressure2-7135398400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/group2/pressure2-7135398400\">pressure2</label>\n",
+       "                <ul id=\"ds-1-/group2/pressure2-4825487900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/group2/pressure2-4825490100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/group2/pressure2-4825490100\">pressure2</label>\n",
        "                    <span class=\"h5tb-dims\">(10) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : -10.3</li><li style=\"list-style-type: none; font-style: italic\">standard_name : pressure</li><li style=\"list-style-type: none; font-style: italic\">units : kPa</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/group2/velocity-7135960300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/group2/velocity-7135964200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/group2/velocity-7135964200\">velocity</label>\n",
+       "                <ul id=\"ds-1-/group2/velocity-4825783000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/group2/velocity-4825785100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/group2/velocity-4825785100\">velocity</label>\n",
        "                    <span class=\"h5tb-dims\">(5) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : 30.2</li><li style=\"list-style-type: none; font-style: italic\">standard_name : velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/group2/z-7136392700\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/group2/z-7136396700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/group2/z-7136396700\">z</label>\n",
+       "                <ul id=\"ds-1-/group2/z-4826041500\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/group2/z-4826043800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/group2/z-4826043800\">z</label>\n",
        "                <span class=\"h5tb-dims\">5.4 [m] (float64)</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : z_coordinate</li><li style=\"list-style-type: none; font-style: italic\">units : m</li>\n",
        "                </ul>\n",
@@ -703,7 +703,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1de6fcca0a0>]"
+       "[<matplotlib.lines.Line2D at 0x22112585250>]"
       ]
      },
      "execution_count": 11,
