--- a/docs/userguide/database/mongo.ipynb
+++ b/docs/userguide/database/mongo.ipynb
@@ -18,8 +18,8 @@
     "\n",
     "<!-- ![mongoDB_concept](mongoDB_concept.png) -->\n",
     "\n",
-    "<img src=\"../_static/mongoDB_concept.png\"\n",
-    "     alt=\"../_static/mongoDB_concept.png\"\n",
+    "<img src=\"../../_static/mongoDB_concept.png\"\n",
+    "     alt=\"../../_static/mongoDB_concept.png\"\n",
     "     style=\"margin-right: 10px; height: 200px;\" />\n",
     "     "
    ]
@@ -332,49 +332,49 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--10766140700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--10766140700\">\n",
+       "                        <input id=\"group-ds--18393508000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--18393508000\">\n",
        "                        /<span>(5)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/correlation-10768602900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/correlation-10768606900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-10768606900\">correlation</label>\n",
+       "                <ul id=\"ds-1-/correlation-18395193200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/correlation-18395195700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-18395195700\">correlation</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/digit-10768764000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/digit-10768768000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/digit-10768768000\">digit</label>\n",
+       "                <ul id=\"ds-1-/digit-18395299000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/digit-18395301100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/digit-18395301100\">digit</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/dissimilarity-10768888700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/dissimilarity-10768891200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-10768891200\">dissimilarity</label>\n",
+       "                <ul id=\"ds-1-/dissimilarity-18395377100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/dissimilarity-18395379200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-18395379200\">dissimilarity</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/images-10769172100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/images-10769174900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/images-10769174900\">images</label>\n",
+       "                <ul id=\"ds-1-/images-18395545100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/images-18395547200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/images-18395547200\">images</label>\n",
        "                    <span class=\"h5tb-dims\">(digit: 1797, 8, 8) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/mean-10769317300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/mean-10769321300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/mean-10769321300\">mean</label>\n",
+       "                <ul id=\"ds-1-/mean-18395620200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/mean-18395622200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/mean-18395622200\">mean</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -685,7 +685,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x2c6cd023e20>"
+       "<matplotlib.collections.QuadMesh at 0x1af62f82e80>"
       ]
      },
      "execution_count": 16,
